<resources>
    <string name="app_name">Tutor+</string>
    <string name="welcome">Get started </string>
    <string name="tutoring101">101 TUTORING</string>
    <string name="help">Help</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="slogant">While we teach, we learn</string>
    <string name="bestTutor">Best Tutor in Math</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fullName">Full name</string>
    <string name="programStudy">2nd in Computer Science</string>
    <string name="course1">ITI1500 or ITI1100</string>
    <string name="course2">ITI1500 or ITI1100</string>
    <string name="course3">ITI1521 or ITI1121</string>
    <string name="languages">Speak both French and English</string>
    <string name="creaditCard">1234 5678 9012 3456</string>
    <string name="termAndCondition">By creationg an Tutor+ account. You agree to the</string>
    <string name="condition">Terms, conditions and privacy Policy</string>
    <string name="menu_icon">Menu</string>
    <string name="help_icon">Help</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_student_main">StudentMain</string>
    <string name="title_activity_student_main_page">StudentMainPage</string>
    <string name="searchable">searchable</string>
    <string name="action_search">Search</string>
    <string name="title_activity_student__main__page">Student_Main_Page</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tutor_main_page">TutorMainPage</string>
    <string name="action_disconnect">Disconnect</string>
</resources>
