<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mamadou.tutor.StudentMainPage">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_menu"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="Menu"
        app:showAsAction="ifRoom" />

    item android:id="@+id/action_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="Help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disconnect"
        android:title="@string/action_disconnect"
        app:showAsAction="never" />

</menu>
