<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mamadou.tutor.Registration">
    <!--  Header  Starts-->

    <TextView
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="@dimen/titleSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create account"/>

    <Button
        android:padding="10dp"
        android:background="@drawable/fb_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="@dimen/titleSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Or"/>
    <EditText
        android:id="@+id/userName"
        android:textSize="@dimen/titleSize"
        android:padding="10dp"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password"
        android:textSize="@dimen/titleSize"
        android:padding="10dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/fullName"
        android:textSize="@dimen/titleSize"
        android:padding="10dp"
        android:hint="@string/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/email"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/titleSize"
        android:padding="10dp"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="signUpWithEmail"
        android:text="Sign up with Email"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>